--- a/yaml/custom_sensor.yaml
+++ b/yaml/custom_sensor.yaml
@@ -1124,3 +1124,16 @@
     {% endif %}
   scan_interval: 10
   timeout: 10
+
+- platform: imap_email_content
+  server: imap.gmail.com
+  port: 993
+  name: payslip_email
+  username: !secret email_username
+  password: !secret email_password
+  senders:
+    - "hr@example.com"  # replace with actual sender
+  search: 'UNSEEN SUBJECT "Payslip"'  # adjust if needed
+  value_template: "New payslip received"
+  scan_interval: 600
+
