--- a/yaml/custom_sensor.yaml
+++ b/yaml/custom_sensor.yaml
@@ -1132,8 +1132,9 @@
   username: !secret email_username
   password: !secret email_password
   senders:
-    - "hr@example.com"  # replace with actual sender
-  search: 'UNSEEN SUBJECT "Payslip"'  # adjust if needed
+    - "payslips@collsoft.ie"
+  search: 'UNSEEN SUBJECT "Payslip for"'  # only matches unseen with 'Payslip for' in subject
   value_template: "New payslip received"
   scan_interval: 600
+
 
