--- a/yaml/automations.yaml
+++ b/yaml/automations.yaml
@@ -3851,3 +3851,19 @@
     data: {}
     action: input_boolean.turn_off
   mode: single
+- id: '1748353050913'
+  alias: Enable Payslip Email Checking
+  description: ''
+  triggers:
+  - at: 08:00:00
+    trigger: time
+  conditions:
+  - condition: template
+    value_template: '{{ (states(''input_datetime.next_pay_day'') | as_datetime).date()
+      - now().date() == timedelta(days=1) }}
+
+      '
+  actions:
+  - target:
+      entity_id: input_boolean.check_payslip_email
+    action: input_boolean.turn_on
