--- a/yaml/automations.yaml
+++ b/yaml/automations.yaml
@@ -3855,7 +3855,7 @@
   alias: Enable Payslip Email Checking
   description: ''
   triggers:
-  - at: 08:00:00
+  - at: 03:00:00
     trigger: time
   conditions:
   - condition: template
@@ -3867,3 +3867,19 @@
   - target:
       entity_id: input_boolean.check_payslip_email
     action: input_boolean.turn_on
+    data: {}
+- id: '1748353073218'
+  alias: Disable Payslip Email Checking
+  triggers:
+  - at: 03:00:00
+    trigger: time
+  conditions:
+  - condition: template
+    value_template: '{{ now().date() - (states(''input_datetime.next_pay_day'') |
+      as_datetime).date() == timedelta(days=1) }}
+
+      '
+  actions:
+  - target:
+      entity_id: input_boolean.check_payslip_email
+    action: input_boolean.turn_off
