--- a/yaml/automations.yaml
+++ b/yaml/automations.yaml
@@ -2243,7 +2243,7 @@
       title: "\U0001F4E9 Payslip Received"
       message: Your payslip email has arrived.
       data:
-        clickAction: https://mail.google.com/mail/u/0/#inbox
+        clickAction: googlegmail://
         notification_icon: mdi:currency-eur
     action: notify.notifications
   - data:
