--- a/yaml/automations.yaml
+++ b/yaml/automations.yaml
@@ -2245,26 +2245,18 @@
       data:
         notification_icon: mdi:currency-eur
     action: notify.notifications
-  - data:
-      date: '{% set today = now().date() %}
-
-        {% set month_after_next = today.month + 2 if today.month < 11 else (today.month
-        + 2) % 12 %}
-
-        {% set year = today.year if today.month < 11 else today.year + 1 %}
-
-        {% set first_of_month_after_next = strptime(year ~ ''-'' ~ month_after_next
-        ~ ''-01'', ''%Y-%m-%d'') %}
-
-        {% set last_day_next_month = first_of_month_after_next - timedelta(days=1)
-        %}
-
-        {{ last_day_next_month.strftime(''%Y-%m-%d'') }}
+  - target:
+      entity_id: input_datetime.last_day_of_month
+    data:
+      date: '{% set today = now() %} {% set next_month = (today.month % 12) + 1 %}
+        {% set year = today.year if next_month > 1 else today.year + 1 %} {% set first_day_next_month
+        = strptime(year ~ ''-'' ~ next_month ~ ''-01'', ''%Y-%m-%d'') %} {% set first_day_after_next_month
+        = first_day_next_month + timedelta(days=31) %} {% set last_day_next_month
+        = first_day_after_next_month.replace(day=1) - timedelta(days=1) %} {{ last_day_next_month.strftime(''%Y-%m-%d'')
+        }}
 
         '
     action: input_datetime.set_datetime
-    target:
-      entity_id: input_datetime.last_day_of_month
   mode: single
 - id: '1715936038206'
   alias: Alarm Snooze
