--- a/yaml/automations.yaml
+++ b/yaml/automations.yaml
@@ -2245,8 +2245,7 @@
       data:
         notification_icon: mdi:currency-eur
         tag: payslip_notification
-        clickAction: ''
-        sticky: false
+        clickAction: https://mail.google.com/mail/u/0/#inbox
     action: notify.notifications
   - target:
       entity_id: input_datetime.last_day_of_month
